完善proto
